Fixed spacing

--- a/Maze game/Styles/style.css
+++ b/Maze game/Styles/style.css
@@ -318,6 +318,7 @@
 
 .image-container {
   flex: 1;
+  margin-right: 40px;
 }
 
 .image-container img {
